# netscope

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  DUCKDB_ANALYSIS.sql  DUCKDB_IMPORT.sql  HOOK_PROTOCOL.md  IMPLEMENTATION_PLAN.md
examples/hooks/: README.md
examples/hooks/node/: hook.js
examples/hooks/python/: hook.py
src/: capture.rs  certs.rs  events.rs  hooks.rs  lib.rs  main.rs  proxy.rs  store.rs
src/parsers/: certificate.rs  dns.rs  http1.rs  mod.rs  tls.rs
