[package]
name = "netscope"
version = "0.1.0"
edition = "2024"
description = "A macOS-focused network inspection core"
license = "MIT"

[features]
default = ["capture"]
capture = ["dep:pcap"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
http = "1.3"
httparse = "1.10"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.26"
x509-parser = "0.16"
async-trait = "0.1"
pcap = { version = "2.2", optional = true }

[dev-dependencies]
tempfile = "3.20"
